# sidekiq-rs

./: Cargo.toml
src/: lib.rs  middleware.rs  processor.rs  redis.rs  stats.rs
tests/: process_cleanup_test.rs  processor_edge_cases_test.rs
