[package]
name = "rusty-sidekiq"
version = "0.14.2"
edition = "2021"
description = "A rust sidekiq server and client using tokio"
authors = ["Garrett Thornburg <garrett.thornburg@hey.com>"]
homepage = "https://github.com/film42/sidekiq-rs"
repository = "https://github.com/film42/sidekiq-rs.git"
keywords = ["sidekiq", "worker", "tokio", "ruby"]
license = "MIT"
readme = "README.md"

[lib]
name = "sidekiq"

[dependencies]
gethostname = "0.5.0"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7.10"
serde_json = { version = "1" }
serde = { version = "1.0", features = ["derive"] }
redis = { version = "1", features = ["aio", "default", "tokio-comp"] }
async-trait = "0.1.74"
thiserror = "2.0.0"
bb8 = "0.9.0"
num_cpus = "1.13"
chrono = "0.4"
rand = "0.9"
hex = "0.4"
cron_clock = "0.8.0"
sha2 = "0.10.6"
libc = "0.2"
convert_case = "0.7.1"

tracing = "0.1.40"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "json"] }

[dev-dependencies]
serial_test = "3.1.1"
tokio = { version = "1", features = ["test-util"] }
